<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:text="@string/first_help" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_service"
        android:id="@+id/button"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/textView"
        android:clickable="true"
        android:enabled="true"
        android:nestedScrollingEnabled="true"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_service"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material"
        android:enabled="true"
        android:clickable="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_service"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:clickable="true"
        android:enabled="true"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material" />

</RelativeLayout>
